--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "svelte-app",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "scripts": {
     "build": "rollup -c",
+    "deploy": "yarn build && cd ./public && ../node_modules/.bin/vercel deploy --name svelte-dashboard",
     "dev": "rollup -c -w",
     "start": "sirv public"
   },
@@ -14,7 +15,8 @@
     "rollup-plugin-livereload": "^2.0.0",
     "rollup-plugin-svelte": "^7.0.0",
     "rollup-plugin-terser": "^7.0.0",
-    "svelte": "^3.0.0"
+    "svelte": "^3.0.0",
+    "vercel": "^21.0.1"
   },
   "dependencies": {
     "sirv-cli": "^1.0.0"
