--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^10.0.0",
     "@rollup/plugin-replace": "^2.3.4",
+    "carbon-components-svelte": "^0.26.0",
     "dotenv": "^8.2.0",
     "eslint": "^7.17.0",
     "eslint-config-airbnb-base": "^14.2.1",
+    "node-sass": "^5.0.0",
     "prettier-eslint": "^12.0.0",
     "rollup": "^2.3.4",
     "rollup-plugin-css-only": "^3.1.0",
@@ -23,6 +25,8 @@
     "rollup-plugin-svelte": "^7.0.0",
     "rollup-plugin-terser": "^7.0.0",
     "svelte": "^3.0.0",
+    "svelte-postcss": "^1.0.7",
+    "svelte-preprocess": "^4.6.1",
     "vercel": "^21.0.1"
   },
   "dependencies": {
