--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "build": "rollup -c",
     "deploy": "yarn build && cd ./public && ../node_modules/.bin/vercel deploy --name svelte-dashboard",
     "dev": "rollup -c -w",
-    "start": "sirv public"
+    "start": "sirv public -s",
+    "start:dev": "sirv public -s --dev"
   },
   "devDependencies": {
     "@rollup/plugin-alias": "^3.1.1",
@@ -30,6 +31,7 @@
     "vercel": "^21.0.1"
   },
   "dependencies": {
-    "sirv-cli": "^1.0.0"
+    "sirv-cli": "^1.0.0",
+    "svelte-routing": "^1.5.0"
   }
 }
